fixes icon position missalignement in Measure.ux
git-svn-id: https://svn.bgdi.admin.ch/mf-chsdi/trunk/chsdi@1017 e100092c-b5e6-494f-8bdf-19c1ff2a4001

--- a/chsdi/public/GeoAdmin.ux/Measure/css/measure.css
+++ b/chsdi/public/GeoAdmin.ux/Measure/css/measure.css
@@ -9,7 +9,7 @@
     background-image: url("../images/measure_area.gif") !important;
     height: 70px !important;
     width: 50px !important;
-   background-position: 0 0;     
+   background-position: 0 0 !important;     
 }
 
 .x-btn-text .gx-map-measurelength, .x-btn-text .gx-map-measurearea {
